fixed overflow of text issue

--- a/profile-card-component-main/styles.css
+++ b/profile-card-component-main/styles.css
@@ -20,7 +20,6 @@ body {
 .card {
   background-color: white;
   width: 351px; 
-  height: 371px;
   border-radius: 10px;
   position: relative; 
 }
@@ -41,16 +40,27 @@ body {
   margin-bottom: 20px; 
 }
 
+
 .fnt-color-fw{
   font-size: 18px; 
   color: hsl(229, 23%, 23%); 
+  font-weight: 700;
+  text-align: center;
+  letter-spacing: 0.5px;
 }
 
 .light-fnt-color {
   color: hsl(0, 0%, 59%); 
-}
-.main-title {
+  font-weight: 400; 
   text-align: center;
+  font-size: 13px;
+  letter-spacing: 1px;
+  
+}
+
+.age {
+  font-size: 18px; 
+  margin-left: 5px;
 }
 
 .card-info-section {
@@ -59,7 +69,15 @@ body {
 }
 
 .city-name {
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid hsl(0, 0%, 59%);
+  margin-top: 12px;
+  padding-bottom: 30px;
+}
+
+.stats {
+  display:flex; 
+  border: 1px solid red;
+
 }
 
 .attribution { font-size: 11px; text-align: center; }
